--- a/test.ipynb
+++ b/test.ipynb
@@ -2,19 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello people\n"
+      "hello, I am daniel putra\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello people\")"
+    "first_name = \"daniel\"\n",
+    "last_name = \"putra\"\n",
+    "intro = \"hello, I am\" + \" \" + first_name + \" \" + last_name\n",
+    "\n",
+    "print(intro)"
    ]
   }
  ],
